--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -311,6 +311,29 @@
         }
     }
 
+    &__vertical {
+        @include font-size(14px);
+        @include line-height("base");
+        color: get-color-primary("after-hours");
+        position: fixed;
+        writing-mode: tb-rl;
+        transform: rotate(-180deg);
+        top: 278px;
+        left: calc(3% + 23px);
+        display: none;
+        word-spacing: 2em;
+        font-family: $font-secondary;
+        text-transform: uppercase;
+        font-weight: 500;
+        letter-spacing: .15em;
+
+        @include breakpoints("tablet") {
+            @include font-size("base");
+            @include line-height("smaller");
+            display: block;
+        }
+    }
+
     h1 {
 
         &.-after {
@@ -338,23 +361,6 @@
         @include breakpoints("tablet") {
             @include font-size("medium-large");
             @include line-height("larger");
-        }
-    }
-
-    h6.-vert {
-        @include font-size(14px);
-        color: get-color-primary("after-hours");
-        position: fixed;
-        writing-mode: tb-rl;
-        transform: rotate(-180deg);
-        top: 278px;
-        left: calc(3% + 23px);
-        display: none;
-        word-spacing: 2em;
-        letter-spacing: .15em;
-
-        @include breakpoints("tablet") {
-            display: block;
         }
     }
 
