Updating the color of the heading for case studies

--- a/src/assets/scss/01_atom/_full-width-background.scss
+++ b/src/assets/scss/01_atom/_full-width-background.scss
@@ -7,7 +7,7 @@
         .m-case-study-page-content__copy-section {
             color: get-color-primary("white");
 
-            h6 {
+            .content__header {
                 color: get-color-primary("white");
             }
         }
