Fixing issues with headings in the text and the color

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -260,7 +260,7 @@
         p,
         ul,
         header {
-            color: get-color("primary", "white");
+            color: get-color("primary", "white") !important;
         }
 
         .-background-texture {
