Updating the KD color

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -355,7 +355,7 @@
         }
 
         &.-kd {
-            background: #25B3C2;
+            background: #27A2B0;
 
             .kd-image {
                 position: relative;
