--- a/src/assets/scss/02_molecule/_blog-post.scss
+++ b/src/assets/scss/02_molecule/_blog-post.scss
@@ -11,10 +11,8 @@
             transform: scale(1.2);
         }
 
-        .m-blog-post__details h3 span {
-            box-shadow:
-                inset 0 -0.15em get-color-primary("white"),
-                inset 0 -0.2em get-color-primary("fresh");
+        .m-blog-post__details h3 {
+            color: get-color-primary("fresh");
         }
     }
 
@@ -75,9 +73,10 @@
         h3 {
             @include font-size(30px);
             @include line-height(36px);
-            color: get-color-primary("fresh");
+            color: get-color-primary("after-hours");
             margin-block-end: 0;
             margin-block-start: 0;
+            transition: color 0.3s ease;
 
             @include breakpoints("sm-tablet") {
                 @include font-size(24px);
@@ -92,13 +91,7 @@
             span {
                 box-shadow:
                     inset 0 -0.15em get-color-primary("white"),
-                    inset 0 -0.2em get-color-primary("white");
-                text-shadow:
-                    .1em 0 get-color-primary("white"),
-                    0 .1em get-color-primary("white"),
-                    -.1em 0 get-color-primary("white"),
-                    0 -.1em get-color-primary("white");
-                transition: box-shadow .25s ease;
+                    inset 0 -0.2em get-color-primary("fresh");
             }
         }
 
