--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -113,4 +113,110 @@
             }
         }
     }
+
+    &__content {
+        @include span-col(12);
+        padding-bottom: 60px;
+
+        @include breakpoints("tablet") {
+            @include span-col(10);
+        }
+
+        h2 {
+            margin-top: 60px;
+        }
+
+        h3 {
+            @include font-size(26px);
+            @include line-height(36px);
+            margin-top: 60px;
+            color: get-color-primary("fresh");
+
+            @include breakpoints("sm-tablet") {
+                @include font-size(30px);
+                @include line-height(40px);
+            }
+
+            @include breakpoints("tablet") {
+                @include font-size(40px);
+                @include line-height(50px);
+            }
+        }
+
+        p {
+            @include font-size("small");
+            @include line-height(32px);
+
+            @include breakpoints("sm-tablet") {
+                @include font-size(24px);
+                @include line-height(39px);
+            }
+
+            + p {
+                margin-top: 39px;
+            }
+
+            a {
+                @include font-size("small");
+                color: get-color-primary("after-hours");
+                font-family: $font-primary;
+                text-decoration: underline;
+                text-decoration-color: get-color-primary("fresh");
+                transition: color 0.3s ease;
+
+                @include breakpoints("sm-tablet") {
+                    @include font-size(24px);
+                }
+
+                &:hover {
+                    color: get-color-primary("fresh");
+                    opacity: 1;
+                }
+            }
+        }
+
+        ul,
+        ol {
+            margin-left: 0;
+
+            @include breakpoints("tablet") {
+                margin-left: 20px;
+            }
+
+            li {
+                @include font-size("small");
+                @include line-height(32px);
+                margin-bottom: 20px;
+
+                @include breakpoints("sm-tablet") {
+                    @include font-size(24px);
+                    @include line-height(39px);
+                }
+            }
+
+            a {
+                @include font-size("small");
+                color: get-color-primary("fresh");
+                font-family: $font-primary;
+
+                @include breakpoints("sm-tablet") {
+                    @include font-size(24px);
+                }
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+
+        hr {
+            border-top: 3px solid get-color-primary("fresh");
+            margin: 60px 0;
+            width: 60px;
+
+            + p > em {
+                @include font-size("smallest");
+            }
+        }
+    }
 }
