--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -114,6 +114,31 @@
         }
     }
 
+    &__wrapper {
+        margin-top: 100px;
+
+        @include breakpoints("tablet") {
+            margin-top: 160px;
+            max-width: 640px;
+        }
+
+        @include breakpoints("laptop") {
+            max-width: 768px;
+        }
+
+        @include breakpoints("sm-desktop") {
+            max-width: 900px;
+        }
+
+        @include breakpoints(1200px) {
+            max-width: 1000px;
+        }
+
+        @include breakpoints(1480px) {
+            max-width: 1200px;
+        }
+    }
+
     &__content {
         @include span-col(12);
         padding-bottom: 60px;
