--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -46,7 +46,7 @@
             @include font-size("smallest");
             @include line-height("base");
             color: get-color-primary("white");
-            margin: 64px 0 8px;
+            margin: 0 0 40px;
             font-weight: 600;
             font-family: $font-secondary;
             letter-spacing: .2em;
@@ -89,7 +89,11 @@
         margin-bottom: 4px;
 
         &.-space {
-            padding: 0 56px;
+            padding: 0 30px;
+
+            @include breakpoints("sm-tablet") {
+                padding: 0 56px;
+            }
         }
 
         .a-button {
