Updating contrast issues for AA and AAA compliance

--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -30,4 +30,11 @@ $colors: (
         "lighter-gray": #DFEBEE,
         "light-blue": #AFC3C8,
     ),
+    "casestudies": (
+        "careerlink": #043544,
+        "cca": #3D5CC2,
+        "hackerone": #CA2573,
+        "kidsdiscover": #0080A9,
+        "pulse": #008568,
+    )
 );
