--- a/src/assets/scss/00_base/_colors.scss
+++ b/src/assets/scss/00_base/_colors.scss
@@ -5,6 +5,7 @@
 $colors: (
     "primary": (
         "fresh": #19A87C,
+        "fresh-dark": #148563,
         "fog": #DFEBEE,
         "white": #FFFFFF,
         "after-hours": #043544,
