--- a/src/assets/scss/02_molecule/_case-study-collage.scss
+++ b/src/assets/scss/02_molecule/_case-study-collage.scss
@@ -27,7 +27,7 @@
         @include font-size(24px);
         line-height: 2rem;
         padding-top: 20px;
-        color: get-color-primary("fresh");
+        color: get-color-primary("fresh-dark");
 
         @include breakpoints("laptop") {
             padding-left: 25%;
