--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -185,7 +185,7 @@
 
             h2 {
                 margin-top: 40px;
-                color: get-color-neutral("light-gray");
+                color: get-color-primary("fresh-dark");
 
                 @include breakpoints("sm-tablet") {
                     margin-top: 80px;
@@ -287,15 +287,19 @@
 
                 a {
                     @include font-size("small");
-                    color: get-color-primary("fresh");
+                    color: get-color-primary("after-hours");
                     font-family: $font-primary;
+                    text-decoration: underline;
+                    text-decoration-color: get-color-primary("fresh");
+                    transition: color 0.3s ease;
 
                     @include breakpoints("sm-tablet") {
                         @include font-size(24px);
                     }
 
                     &:hover {
-                        text-decoration: underline;
+                        color: get-color-primary("fresh");
+                        opacity: 1;
                     }
                 }
             }
