AWE-17: Pushing up the current progress on the careers page

--- a/src/assets/scss/00_base/_typography.scss
+++ b/src/assets/scss/00_base/_typography.scss
@@ -49,7 +49,7 @@ h2 {
 h3 {
     @include font-size("small");
     @include line-height(32px);
-    color: get-color("neutral", "light-gray");
+    color: get-color-primary("after-hours");
 
     @include breakpoints("tablet") {
         @include font-size("medium-large");
