--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -5,12 +5,14 @@
         "blog-featured",
         "blog-post",
         "button-row",
-        "careers",
+        "career",
         "contact-info",
+        "core-value",
         "header",
         "footer",
         "fieldset",
         "case-study",
         "case-study-collage",
         "case-study-page-content",
-        "case-study-image-swatch";
+        "case-study-image-swatch",
+        "perk";
