--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -3,10 +3,13 @@
 \*------------------------------------*/
 
 @import "blog-list",
+        "career-list",
         "case-study-list",
         "contact-form",
+        "core-value-list",
         "hero",
         "home-animation",
         "menu",
+        "perk-list",
         "slider";
 
