--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -1,8 +1,5 @@
 .p-interior-page {
-
     .o-hero {
-        padding-top: 60px;
-
         &.-case-study {
 
             @include breakpoints("desktop") {
@@ -17,6 +14,8 @@
         }
 
         &.-careers {
+            margin-bottom: 60px;
+
             .o-hero__left {
                 @include breakpoints("tablet") {
                     @include span-col(7);
@@ -34,10 +33,6 @@
                     margin-top: 142px;
                 }
             }
-        }
-
-        @include breakpoints("desktop") {
-            padding-top: 0;
         }
 
         &__titles {
