AWE-17: Updating jump links; Providing recruitment URLs for job applications; Adding Careers to the menu

--- a/src/assets/scss/03_organism/_menu.scss
+++ b/src/assets/scss/03_organism/_menu.scss
@@ -121,6 +121,10 @@
                 transition-delay: 0.75s, 0.75s;
             }
 
+            &:nth-of-type(4) {
+                transition-delay: 1s, 1s;
+            }
+
             &:hover {
                 opacity: 0.6;
             }
