--- a/src/assets/scss/05_page/_careers.scss
+++ b/src/assets/scss/05_page/_careers.scss
@@ -34,6 +34,7 @@
         margin-bottom: 16px;
         color: get-color-primary("fresh-dark");
         font-family: $font-secondary;
+        font-weight: 600;
         letter-spacing: 0.2em;
         text-transform: uppercase;
     }
